@@ -422,9 +422,7 @@ public class ContextJavaUtil {
                                     .append(": ").append(otherErl.artifactStack.get(mi).toBasicString());
                         }
                     }
-                    // Changed from warn to info to reduce log noise (issue #596/#15)
-                    // These are potential conflicts, not confirmed issues, so info level is appropriate
-                    logger.info(msgBuilder.toString());
+                    logger.warn(msgBuilder.toString());
                 }
 
                 // add new lock to this.recordLockByEntityPk, and TxStackInfo.recordLockList
@@ -574,9 +572,7 @@ public class ContextJavaUtil {
 
 
     public final static ObjectMapper jacksonMapper = new ObjectMapper()
-            .setDefaultPropertyInclusion(JsonInclude.Value.construct(
-                        JsonInclude.Include.ALWAYS,
-                        JsonInclude.Include.ALWAYS))
+            .setSerializationInclusion(JsonInclude.Include.ALWAYS)
             .enable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS).enable(SerializationFeature.INDENT_OUTPUT)
             .enable(DeserializationFeature.USE_BIG_DECIMAL_FOR_FLOATS)
             .configure(JsonGenerator.Feature.WRITE_BIGDECIMAL_AS_PLAIN, true);
@@ -667,7 +663,7 @@ public class ContextJavaUtil {
         @Override protected void afterExecute(Runnable runnable, Throwable throwable) {
             ExecutionContextImpl activeEc = ecfi.activeContext.get();
             if (activeEc != null) {
-                logger.warn("In WorkerThreadPoolExecutor.afterExecute() there is still an ExecutionContext for runnable " + runnable.getClass().getName() + " in thread (" + Thread.currentThread().threadId() + ":" + Thread.currentThread().getName() + "), destroying");
+                logger.warn("In WorkerThreadPoolExecutor.afterExecute() there is still an ExecutionContext for runnable " + runnable.getClass().getName() + " in thread (" + Thread.currentThread().getId() + ":" + Thread.currentThread().getName() + "), destroying");
                 try {
                     activeEc.destroy();
                 } catch (Throwable t) {
